Fixed sidebar content

--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -1,8 +1,15 @@
 <div class="sidebar">
-  <h4>About</h4>
-  <p>
-    Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis
-    consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed
-    consectetur.
-  </p>
+  <h4>See me outside</h4>
+  <ul>
+    <li><a href="https://facebook.com/antaresprogramming" target="_blank">Antares on Facebook</a></li>
+    <li><a href="https://github.com/celestialcinnamon/antares-blog" target="_blank">Antares on Github</a></li>
+  </ul>
+
+  <ul>
+    <li><a href="https://facebook.com/dorkas.rubio" target="_blank">See me on Facebook</a></li>
+    <li><a href="#!" onclick="alert('I told you to not do that')">See me on Twitter</a> (please don't)</li>
+    <li><a href="https://instagram.com/melancholicapoptosis" target="_blank">See me on Instagram</a></li>
+    <li><a href="https://celestialcinnamon.github.io" target="_blank">See my portfolio</a></li>
+    <li><a href="mailto:https:francoisoibur21@gmail.com" target="_blank">Send me an email:</a> francoisoibur21@gmail.com</li>
+  </ul>
 </div>
