--- a/themes/antares/layout/_partial/archive.ejs
+++ b/themes/antares/layout/_partial/archive.ejs
@@ -1,15 +1,35 @@
-<div class="blog-post">
+<div class="post">
     <!-- Title -->
-    <h2 class="blog-post-title-archive">
+    <h3 class="post__title">
         <a href="<%- config.root %><%- item.path %>">
-            <%- item.title || item.link%>
+            <%- item.title %>
         </a>
-    </h2>
+    </h3>
     <!-- Date and Author -->
-    <p class="blog-post-meta">
-        <%= item.date.format(config.date_format) %>
-        <% if(item.author) { %>
-            by <%- item.author %>
-        <% } %>
-    </p>
+    <% 
+    if(item.author) { %>
+        <div class="flex">
+            <figure class="author">
+                <%- image_tag(item.author.image, {alt: item.author.name, class: 'author__image'}) %>
+                <figcaption class="author__meta">
+                    <cite class="author__name"><%= item.author.name %></cite>
+                    <time datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
+                </figcaption>
+            </figure>
+        </div>
+    <% } %>
+    
+<% if (item.tags && item.tags.length){ %>
+    <%
+        var tags = [];
+        item.tags.forEach(function(tag){
+            tags.push('<a class="tag" href="' + config.root + tag.path + '">#' + tag.name + '</a>');
+        });
+    %>
+    <div class="flex">
+        <%- tags.join(' ') %>
+    </div>
+    <% } %>
+
+    
 </div>
