--- a/themes/antares/layout/_partial/article.ejs
+++ b/themes/antares/layout/_partial/article.ejs
@@ -1,19 +1,25 @@
-<div class="blog-post--full">
+
+
+<div class="post post--full">
     <!-- Title -->
-    <header class="blog-header">
-      <h2 class="blog-post-title">
+      <h1 class="blog-post-title">
           <a href="<%- config.root %><%- item.path %>">
               <%- item.title || item.link%>
           </a>
-      </h2>
+      </h1>
     <!-- Date and Author -->
-    <p class="blog-post-meta">
-        <%= item.date.format(config.date_format) %>
-        <% if(item.author) { %>
-            by <%- item.author %>
-        <% } %>
-    </p>
-    </header>
+    <% 
+    if(item.author) { %>
+        <div class="flex">
+            <figure class="author">
+                <%- image_tag(item.author.image, {alt: item.author.name, class: 'author__image'}) %>
+                <figcaption class="author__meta">
+                    <cite class="author__name"><%= item.author.name %></cite>
+                    <time datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
+                </figcaption>
+            </figure>
+        </div>
+    <% } %>
     <!-- Content -->
     <%- item.content %>
     <hr />
