--- a/themes/antares/layout/_partial/footer.ejs
+++ b/themes/antares/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="blog-footer">
+<footer class="footer">
   <p>&copy; 2018 Francis Rubio</p>
   <p><a href="#">Back to top</a></p>
 </footer>
