--- a/themes/antares/layout/archive.ejs
+++ b/themes/antares/layout/archive.ejs
@@ -1,8 +1,7 @@
-<%- partial('_partial/header', {title: 'Post Archives'}) %>
-
+<%- /*partial('_partial/header', {title: 'Post Archives'})*/ %>
 <div class="card-grid">
     <% page.posts.each(function(item){ %>
         <%- partial('_partial/archive', {item: item}) %>
     <% }); %>
 </div>
-<%- partial('_partial/pagination') %>
+
