--- a/themes/antares/layout/_partial/article.ejs
+++ b/themes/antares/layout/_partial/article.ejs
@@ -45,7 +45,7 @@
     %>
     <div class="blog-categories-container">
         <strong>Filed under </strong>
-        <%- categories.join(' / ') %>
+        <%- categories.join(' | ') %>
     </div>
     <% } %>
 </div>
