--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -14,20 +14,18 @@
   <meta name="author" content="<%= config.author %>" />
   
   <!-- Favicon and PWA theme -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/antares-blog/images/apple-touch-icon.png?v=qABxGEXnbd">
-  <link rel="icon" type="image/png" sizes="32x32" href="/antares-blog/images/favicon-32x32.png?v=qABxGEXnbd">
-  <link rel="icon" type="image/png" sizes="194x194" href="/antares-blog/images/favicon-194x194.png?v=qABxGEXnbd">
-  <link rel="icon" type="image/png" sizes="192x192" href="/antares-blog/images/android-chrome-192x192.png?v=qABxGEXnbd">
-  <link rel="icon" type="image/png" sizes="16x16" href="/antares-blog/images/favicon-16x16.png?v=qABxGEXnbd">
-  <link rel="manifest" href="/antares-blog/images/site.webmanifest?v=qABxGEXnbd">
-  <link rel="mask-icon" href="/antares-blog/images/safari-pinned-tab.svg?v=qABxGEXnbd" color="#ff5555">
-  <link rel="shortcut icon" href="/antares-blog/images/favicon.ico?v=qABxGEXnbd">
+  <link rel="apple-touch-icon" sizes="180x180" href="/antares-blog/images/apple-touch-icon.png?v=alQq8wbjvL">
+  <link rel="icon" type="image/png" sizes="32x32" href="/antares-blog/images/favicon-32x32.png?v=alQq8wbjvL">
+  <link rel="icon" type="image/png" sizes="16x16" href="/antares-blog/images/favicon-16x16.png?v=alQq8wbjvL">
+  <link rel="manifest" href="/antares-blog/images/site.webmanifest?v=alQq8wbjvL">
+  <link rel="mask-icon" href="/antares-blog/images/safari-pinned-tab.svg?v=alQq8wbjvL" color="#ff5555">
+  <link rel="shortcut icon" href="/antares-blog/images/favicon.ico?v=alQq8wbjvL">
+  <meta name="apple-mobile-web-app-title" content="Antares Programming">
+  <meta name="application-name" content="Antares Programming">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="/antares-blog/images/mstile-144x144.png?v=qABxGEXnbd">
-  <meta name="msapplication-config" content="/antares-blog/images/browserconfig.xml?v=qABxGEXnbd">
-  <meta name="theme-color" content="#ffeedd">
-
-
+  <meta name="msapplication-TileImage" content="/antares-blog/images/mstile-144x144.png?v=alQq8wbjvL">
+  <meta name="msapplication-config" content="/antares-blog/images/browserconfig.xml?v=alQq8wbjvL">
+  <meta name="theme-color" content="#ffffdd">
 
   <!-- Bootstrap core CSS -->
   <%- css('css/normalize.css') %>
