Fixed description metadata and formats in post

--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -9,7 +9,7 @@
   %>
   <meta
     name="description"
-    content="<%= description %>"
+    content="<%- strip_html(description) %>"
   />
   <meta name="author" content="<%= config.author %>" />
   
