--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -423,8 +423,9 @@ hr {
     grid-gap: 1rem;
     gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(30ch, 1fr));
-    grid-auto-rows: minmax(150px, auto);
+    grid-auto-rows: min-content;
     align-items: flex-start;
+    
   }
 
   .card-grid .post {
